<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/backgrnd">

    <TextView
        android:id="@+id/girisyap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="233dp"
        android:text="@string/giris_yap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="41dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="322dp"
        android:layout_height="43dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/girisyap"
        android:drawableStart="@drawable/emailicon"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="322dp"
        android:layout_height="43dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:hint="@string/password"
        android:drawableStart="@drawable/paswrd"/>

    <Button
        android:id="@+id/forgetpasword"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        android:text="@string/forgetps"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <ImageButton
        android:id="@+id/applybuton"
        android:layout_width="100dp"
        android:layout_height="91dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="276dp"
        android:background="@drawable/mybutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:srcCompat="@drawable/okey" />

    <Button
        android:id="@+id/registerbuton"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="35dp"
        android:background="#00000000"
        android:text="@string/register"
        android:textColor="@color/textclr2"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>