<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@drawable/backgrnd">


    <TextView
        android:id="@+id/register"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="220dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="41sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registeremail"
        android:layout_width="322dp"
        android:layout_height="43dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/emailicon"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <EditText
        android:id="@+id/registerpasword"
        android:layout_width="322dp"
        android:layout_height="43dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registeremail"
        android:drawableStart="@drawable/paswrd"
        android:hint="@string/password" />
    <EditText
        android:id="@+id/againpassword"
        android:layout_width="322dp"
        android:layout_height="43dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerpasword"
        android:drawableStart="@drawable/paswrd"
        android:hint="@string/againpassword"/>
    <Button
        android:id="@+id/loginbuton"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="35dp"
        android:background="#00000000"
        android:text="@string/register"
        android:textColor="@color/textclr2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/applybuton"
        android:layout_width="100dp"
        android:layout_height="91dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/mybutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/againpassword"
        app:srcCompat="@drawable/apply" />

</androidx.constraintlayout.widget.ConstraintLayout>